--- a/public/index.html
+++ b/public/index.html
@@ -11,35 +11,49 @@
         <header>
             <h1>Zesty</h1>
             <nav>
-                <button id="dashboard-tab" class="active">Dashboard</button>
-                <button id="recipes-tab">Recipes</button>
+                <button class="tab-button active" data-panel="dashboard">Dashboard</button>
+                <button class="tab-button" data-panel="recipes">Recipes</button>
             </nav>
         </header>
-
-        <main id="main-content">
-            <section id="dashboard" class="active-section">
-                <h2>Your Groceries</h2>
+        <main>
+            <div id="dashboard" class="panel active">
+                <div class="quick-look-bar" id="quick-look-bar">
+                    All items are fresh!
+                </div>
+                <h2>Your Pantry</h2>
                 <div id="grocery-list" class="grocery-grid">
-                    <!-- Grocery items will be dynamically added here -->
+                    <!-- Items will be inserted here -->
                 </div>
-                <div class="add-item-form-container">
-                    <form id="add-item-form">
-                        <input type="text" id="item-name" placeholder="Item Name" required>
-                        <input type="number" id="item-quantity" placeholder="Quantity" value="1" min="1" required>
-                        <button type="submit">Add Item</button>
-                    </form>
+            </div>
+            <div id="recipes" class="panel">
+                <div class="recipe-panel">
+                    <h2>Recipe Ideas</h2>
+                    <button id="generate-recipe-btn">Generate Recipe</button>
+                    <div id="recipe-output" class="recipe-output">
+                        <p style="text-align:center;">Click "Generate" to get a recipe!</p>
+                    </div>
                 </div>
-            </section>
-
-            <section id="recipes" class="hidden-section">
-                <h2>Recipe Generator</h2>
-                <button id="generate-recipe-btn">Generate Recipe (Expiring Items)</button>
-                <div id="recipe-output" class="recipe-card">
-                    <p>Click "Generate" to get a recipe!</p>
-                </div>
-            </section>
+            </div>
         </main>
     </div>
+
+    <button class="fab" id="add-item-fab">+</button>
+    
+    <!-- Add Item Dialog -->
+    <div class="dialog-overlay" id="add-item-dialog">
+        <div class="dialog-content">
+            <div class="dialog-header">
+                <h3 class="dialog-title">Add New Item</h3>
+                <button class="close-btn" id="close-dialog-btn">&times;</button>
+            </div>
+            <form id="add-item-form" class="dialog-form">
+                <input type="text" id="item-name" placeholder="Item Name" required>
+                <input type="number" id="item-quantity" placeholder="Quantity" value="1" min="1" required>
+                <button type="submit" id="submit-item-btn">Add to Pantry</button>
+            </form>
+        </div>
+    </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
